--- a/src/utils/colors.css
+++ b/src/utils/colors.css
@@ -1,10 +1,11 @@
 :root {
-  --primary-color: #789170;
-  --primary-dark: #5a6e55;
-  --secondary-color: #305951;
+  --primary-color: #315851;
+  --primary-dark: #00574f;
+  --secondary-color: #00574f;
+  --accent-color: #6fb965;
   --text-muted: rgba(255, 255, 255, 0.7);
   --text-color: #333;
-  --background-color: #955a5a;
+  --background-color: #f5f5f5;
   --white: #ffffff;
   --light-gray: #e0e0e0;
   --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
